classDiagram
direction LR

class Season {
    +int id
    +int year
}

class Race {
    +int id
    +string name
    +int circuit_id
    +int season_id
    +date date
}

class Circuit {
    +int id
    +string name
    +string country
    +string city
    +float length_km
}

class Driver {
    +int id
    +string first_name
    +string last_name
    +int number
    +string nationality
    +date birth_date
}

class Team {
    +int id
    +string name
    +string country
    +string principal
    +string engine
    +string car
}

class RaceResult {
    +int id
    +int race_id
    +int driver_id
    +int team_id
    +int position
    +float points
}

class PitStop {
    +int id
    +int result_id
    +int stop_number
    +duration duration
}

Season "1" --> "0..*" Race : contains
Circuit "1" --> "0..*" Race : hosts
Race "1" --> "0..*" RaceResult : has
Driver "1" --> "0..*" RaceResult : has
Team "1" --> "0..*" RaceResult : has
RaceResult "1" --> "0..*" PitStop : has
